--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     data-aos-delay="100"
                     style="word-break: break-word"
                   >
-                  Welcome to our <span style="font-weight: bolder; color: #FEAC2D;">$FROGE</span> Inspired by the iconic Kabosu, the Shiba Inu behind Dogecoin, captured by Kabosumama in a charming 2017 Instagram post wearing an adorable frog costume, we celebrate the best of both meme worlds. Join us in this unique fusion of Frog and Doge!<br />
+                 Unleash the $TIT With Solana<br />
                   </p>
                   <p
                     class="text-white mb-8"
@@ -331,7 +331,7 @@
        
                     <h1 class="text-white mb-8">About</h1>
                     <p class="mb-6">
-                      Kabosu the famous shiba inu that has become the face of the 'Dogecoin' is pictured by Kabosumama in an instagram post in 2017 wearing her adorable frog costume. The best of both meme worlds brought together with the love of Frog and Doge.
+                      $Titcoin is a cutting-edge digital currency designed to transform the way people think about and handle money. Built on a robust blockchain platform, $Titcoin offers fast, secure, and anonymous transactions, making it the ideal choice for both everyday purchases and large-scale investments.
                     </p>
                    
                     <a
