--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     data-aos-delay="100"
                     style="word-break: break-word"
                   >
-                 Unleash the $TIT With Solana<br />
+                 Unleash the $TTC With Solana<br />
                   </p>
                   <p
                     class="text-white mb-8"
