--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="container">
           <a class="navbar-brand" href="#">
             <div class="d-flex align-center justify-center logo">
-              <img src="assets/images/icons/img.png" alt="" width="64" />
-              <h4 class="mb-0 bold">$Titcoin</h4>
+              <img src="assets/images/icons/logo.png" alt="" width="64" />
+              <h4 class="mb-0 ml-2 bold"> Titcoin</h4>
             </div>
           </a>
 
@@ -80,8 +80,8 @@
                
               </ul>
               <div class="">
-                <a href="https://dexscreener.com/solana/5j1wWnDNiQepDvaMM3oh8dYdDtFjfEe4p8jar9gypump" class="btn btn-outline-primary-dark"
-                  >Chart</a
+                <a href="https://www.dextools.io/app/en/solana/pair-explorer/47k7Q9dwgvoMDWZWidMYEAcPqVWCmr3c7uf45VNvgDqi" class="btn btn-outline-primary-dark"
+                  >Dextools</a
                 >
               </div>
             </div>
@@ -190,7 +190,7 @@
                      
                       target="_blank"
                       class="btn btn-outline-primary-dark btn-sm"
-                      >View Chart</a
+                      >Dexscreener</a
                     >
                     <!-- <a
                       href="https://t.me/$Titcoin_bot"
