--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>$Titcoin</title>
+    <title>Titcoin</title>
 
 
 
@@ -152,7 +152,7 @@
                     data-aos="fade-up-sm"
                     data-aos-delay="100"
                   >
-                    $Titcoin
+                    Titcoin
                     <!-- <span class="text-primary-dark">
                       <br />Your Ultimate Deployer Bot</span
                     > -->
@@ -330,9 +330,7 @@
                   <div class="content">
        
                     <h1 class="text-white mb-8">About</h1>
-                    <p class="mb-6">
-                      $Titcoin is a cutting-edge digital currency designed to transform the way people think about and handle money. Built on a robust blockchain platform, $Titcoin offers fast, secure, and anonymous transactions, making it the ideal choice for both everyday purchases and large-scale investments.
-                    </p>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">EXACTLY 15 years ago today, Satoshi Nakamoto debated naming <a href="https://twitter.com/hashtag/Bitcoin?src=hash&amp;ref_src=twsrc%5Etfw">#Bitcoin</a> &quot;Titcoin&quot; 🤯<br><br>I can&#39;t believe Satoshi even considered this! 🤣 <a href="https://t.co/pNxrwz56zm">pic.twitter.com/pNxrwz56zm</a></p>&mdash; Walker⚡️ (@WalkerAmerica) <a href="https://twitter.com/WalkerAmerica/status/1826336638890377649?ref_src=twsrc%5Etfw">August 21, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                    
                     <a
                       target="_blank"
@@ -811,7 +809,7 @@
               <div class="row g-6">
                 <div class="col-md-6 col-lg-4">
                   <div class="footer-widget text-center text-md-start">
-                    <h6 class="text-white mb-2">$Titcoin</h6>
+                    <h6 class="text-white mb-2">Titcoin</h6>
                     <ul class="link-list list-unstyled mb-0">
                       <li>
                         <a href="#about">About</a>
@@ -912,12 +910,12 @@
             <div class="col-lg-3 order-lg-1 me-auto">
               <div class="d-flex align-center justify-lg-start logo">
                 <img src="assets/images/icons/logo.png" alt="" width="64" />
-                <h4 class="mb-0 bold">$Titcoin</h4>
+                <h4 class="mb-0 bold">Titcoin</h4>
               </div>
             </a>
                 </a>
                 <p class="fs-sm mb-0 mt-4">
-                  Join us on this exciting journey as $Titcoin continues to evolve, ensuring a secure digital landscape .
+                  Join us on this exciting journey as Titcoin continues to evolve, ensuring a secure digital landscape .
 
 
 
@@ -933,7 +931,7 @@
               <br />
               © 2024
               <span style="color:#FEAC2D"
-                >$Titcoin</span
+                >Titcoin</span
               >. | All rights reserved
             </p>
           </div>
