--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="col-lg-6" data-aos="fade-up-sm" data-aos-delay="50">
                   <div class="content">
        
-                    <h1 class="text-white mb-8">About $TTC</h1>
+                    <h1 class="text-white mb-8">SATOSHI’S ORIGINAL VISION</h1>
                     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">EXACTLY 15 years ago today, Satoshi Nakamoto debated naming <a href="https://twitter.com/hashtag/Bitcoin?src=hash&amp;ref_src=twsrc%5Etfw">#Bitcoin</a> &quot;Titcoin&quot; 🤯<br><br>I can&#39;t believe Satoshi even considered this! 🤣 <a href="https://t.co/pNxrwz56zm">pic.twitter.com/pNxrwz56zm</a></p>&mdash; Walker⚡️ (@WalkerAmerica) <a href="https://twitter.com/WalkerAmerica/status/1826336638890377649?ref_src=twsrc%5Etfw">August 21, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                    
                     <a
